# clustering-lib

./: .gitignore  LICENSE  README.html  README.md  demo.ipynb  example.py  example2.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yaml
clustering_lib/: __init__.py  base.py
clustering_lib/algorithms/: __init__.py  auto_clustering.py  dbscan.py  hierarchical.py  kmeans.py
clustering_lib/datasets/: load_datasets.py
clustering_lib/evaluation/: __init__.py  metrics.py  selection.py
clustering_lib/preprocessing/: __init__.py  dimensionality_reduction.py  scaling.py
clustering_lib/utils/: __init__.py  helpers.py
clustering_lib/visualization/: __init__.py  interactive.py  plots.py
docs/: diagrama_clases.md  diagrama_clases.mmd
tests/: __init__.py  test_algorithms.py  test_evaluation.py  test_interactive.py  test_preprocessing.py  test_selection.py  test_utils.py  test_visualization.py
tests/__init__.py/: test_algorithms.py  test_preprocessing.py  test_visualization.py
