#
# MIT License
#
# Copyright (c) 2024 Miguel Conde
#
# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clustering-lib"
version = "0.1.0"
description = "Una biblioteca de clustering en Python con múltiples algoritmos y herramientas de análisis."
readme = "README.md"
keywords = ["clustering", "machine learning", "data analysis"]
license = {text = "MIT License"}
authors = [
    {name = "Miguel Conde", email = "miguelco2000@gmail.com"},
]
maintainers = [
    {name = "Miguel Conde", email = "miguelco2000@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.18.0",
    "scipy>=1.4.0",
    "scikit-learn>=0.22.0",
    "matplotlib>=3.1.0",
    "ipywidgets>=7.5.1",
]
requires-python = ">=3.7"

[project.urls]
"Código fuente" = "https://github.com/miguel-conde/clustering-lib"
"Documentación" = "https://github.com/miguel-conde/clustering-lib#readme"
